syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
package pings;

service PingsService {
    rpc GetPings (PingsRequest) returns (Pings);
}

message PingsRequest {
    string address = 1;
    google.protobuf.Timestamp since = 2;
    google.protobuf.Timestamp until = 3;
}

message Pings {
    string ip = 1;
    repeated Ping pings = 2;
}

message Ping {
    google.protobuf.Timestamp time = 1;
    google.protobuf.Duration duration = 2;
}
